# modern_cpp

./: .gitignore  README.md  workspace.code-workspace
account/: CMakeLists.txt  account.cpp  account.h  checking.cpp  checking.h  main.cpp  savings.cpp  savings.h  transaction.cpp  transaction.h
basics/: .gitignore  CMakeLists.txt  assignments.cpp  assignments.hpp  basic  basic.cpp  basic.hpp  basics.cpp  basics.hpp  main.cpp
classtemplates17/: CMakeLists.txt  ctad.cpp  fold_expressions.cpp  ifconstexpr.cpp  main.cpp  traits_suffixes.cpp
concurrency/: CMakeLists.txt  async.cpp  main.cpp  promise_future.cpp  sharingdata.cpp  threads.cpp  threads_funs.cpp
cpp17/: CMakeLists.txt  attributes.cpp  constexpr_lambda.cpp  evaluation_order.cpp  feature_macros.cpp  if_switch.cpp  main.cpp  mandatory_copy_elision.cpp  nested_namespaces.cpp  noexcept.cpp  structured_bindings.cpp
cpp17/inline/: inline.cpp  vars.h
except/: CMakeLists.txt  except.cpp  except.hpp  main.cpp
file_io/: CMakeLists.txt  copy.cpp  file_io.cpp  file_io.hpp  main.cpp
file_io/files/: copy.cpp  test.txt
goodies/: CMakeLists.txt  goodies.cpp  goodies.hpp  main.cpp  union.cpp
lambda/: CMakeLists.txt  capture.cpp  funobj.cpp  lambda.cpp  lambda.hpp  main.cpp
memory/: CMakeLists.txt  main.cpp  memory.cpp  memory.hpp
memory2/: CMakeLists.txt  integer.cpp  main.cpp  mem2.cpp  mem2.hpp
mvsemantics/: CMakeLists.txt  integer.cpp  integer.hpp  main.cpp  readme.md
objs/: CMakeLists.txt  main.cpp  objs.cpp  objs.hpp
ooo/: CMakeLists.txt  main.cpp  ooo.cpp  ooo.hpp
opover/: CMakeLists.txt  integer.cpp  integer.hpp  main.cpp
optional17/: CMakeLists.txt  any.cpp  filesystem.cpp  main.cpp  optional.cpp  parallel.cpp  string_view.cpp  variant.cpp
templates/: CMakeLists.txt  aliases.cpp  aliases.hpp  classtemp.cpp  classtemp.hpp  integer.cpp  integer.hpp  main.cpp  templates.cpp  templates.hpp  variadic.cpp  variadic.hpp
